
Les améliorations décrites sur cette page sont spécifiques aux fonctions BlueXP qui permettent la gestion de Cloud Volumes ONTAP. Pour découvrir les nouveautés du logiciel Cloud Volumes ONTAP lui-même, https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/index.html["Accédez aux notes de version de Cloud Volumes ONTAP"^].



== 12 mai 2025



=== Découverte des déploiements réalisés via Azure Marketplace dans BlueXP 

BlueXP  est désormais en mesure de détecter les systèmes Cloud Volumes ONTAP déployés directement depuis Azure Marketplace. Cela signifie que vous pouvez désormais ajouter et gérer ces systèmes en tant qu'environnements de travail dans BlueXP , comme n'importe quel autre système Cloud Volumes ONTAP.

https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/task-deploy-cvo-azure-mktplc.html["Déployez Cloud Volumes ONTAP à partir d'Azure Marketplace"^]



=== Tiering des données pour les locataires Azure

Vous pouvez désormais activer le Tiering pour un locataire Azure dans le cas où l'environnement de travail Cloud Volumes ONTAP est créé par un locataire et où BlueXP  Connector est créé par un autre locataire. Grâce à cette fonctionnalité, vous pouvez utiliser le même connecteur pour hiérarchiser les données de plusieurs locataires Azure.

https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/task-tiering.html#requirements-to-tier-data-for-an-azure-tenant["Conditions requises pour procéder au Tiering des données d'un locataire Azure"^]



== 16 avril 2025



=== Nouvelles régions prises en charge dans Azure

Vous pouvez désormais déployer Cloud Volumes ONTAP 9.12.1 GA ou version ultérieure dans une ou plusieurs zones de disponibilité dans Azure dans les régions suivantes. Cela inclut la prise en charge des déploiements à un seul nœud et la haute disponibilité (HA).

* Espagne Centrale
* Mexique Centre

