@@ -1092,7 +1092,6 @@
   <block id="0bf3330853877ab4b76b4f1e00d3ace2" category="list-text">NVE chiffre les données au repos un volume à la fois. Chaque volume de données dispose de sa propre clé de chiffrement unique.</block>
   <block id="988d5e992ea371904581e6f8ad13bac7" category="list-text">NAE est une extension de NVE qui chiffre les données pour chaque volume, tandis que les volumes partagent une clé dans l'ensemble de l'agrégat. NAE permet également la déduplication de blocs communs à tous les volumes de l'agrégat.</block>
   <block id="154811f59111df605f6aebc9999a1135" category="paragraph">NVE et NAE sont pris en charge par un gestionnaire de clés externe.</block>
-  <block id="e1bf87c98edd3bee07d170ae8b118aeb" category="paragraph">Par défaut, NetApp Aggregate Encryption (NAE) est activé sur les nouveaux agrégats après la configuration d'un gestionnaire de clés externe. Pour les nouveaux volumes qui ne font pas partie d'un agrégat NAE, NetApp Volume Encryption (NVE) est activé par défaut (par exemple, si des agrégats existants ont été créés avant de configurer un gestionnaire de clés externe).</block>
   <block id="d200c22f00ca54467dc4ad3823710388" category="inline-link">AWS Key Management Service (KMS)</block>
   <block id="60fa85f272e116effea35da2e9f082ca" category="paragraph">Lorsque vous lancez un système Cloud Volumes ONTAP dans AWS, vous pouvez activer le chiffrement des données à l'aide du<block ref="8fc3b96c90d2dea9ee9936bb213df75b" category="inline-link-rx"></block>. BlueXP demande des clés de données à l'aide d'une clé maître client (CMK).</block>
   <block id="b7e9ad250523d385d7738ce667a69f9f" category="admonition">Une fois que vous avez créé un système Cloud Volumes ONTAP, vous ne pouvez pas modifier la méthode de chiffrement des données AWS.</block>
@@ -1682,14 +1681,12 @@
   <block id="a34ba0327bb6f5e052aa4d47c9024cd7" category="section-title">Configurations prenant en charge le tiering des données</block>
   <block id="aac3150f303991246792d1b76e543f1f" category="paragraph">Vous pouvez activer le Tiering des données lors de l'utilisation de configurations et de fonctionnalités spécifiques.</block>
   <block id="ec4c1907e0b1b3ab9bfe34d9898d0723" category="section-title">Prise en charge dans AWS</block>
-  <block id="9a546a1baaebd3e2af69af4e1f807ea9" category="list-text">Le Tiering des données est pris en charge dans AWS à partir de Cloud Volumes ONTAP 9.2.</block>
   <block id="049a56718afb4bc754cebf8a5567c3c8" category="section-title">Prise en charge dans Azure</block>
   <block id="f16872b2bf28c8dcda252e8197cc1a5e" category="list-text">Le Tiering des données est pris en charge par Azure comme suit :</block>
   <block id="c7f6ec5d95cafd0132e2322cbdca7f47" category="list-text">Version 9.4 avec des systèmes à un seul nœud</block>
   <block id="146aae59b5e422bc518402fc01301883" category="list-text">Version 9.6 avec paires haute disponibilité</block>
   <block id="c22e6c8e140bb405c574c67bff9bd946" category="list-text">Le Tier de performance peut être des disques gérés SSD premium, des disques gérés SSD standard ou des disques gérés HDD standard.</block>
   <block id="783e44882ef395447a1b422181ebb3d4" category="section-title">Prise en charge dans Google Cloud</block>
-  <block id="c0a92ff7cf6e8a1570f1775a4a7c563d" category="list-text">Le Tiering des données est pris en charge dans Google Cloud à partir de Cloud Volumes ONTAP 9.6.</block>
   <block id="0285440088a9a63b47028bcc1bccb076" category="section-title">Interopérabilité des fonctionnalités</block>
   <block id="c1b52ad9b725f31f29df47c75d8f2bdd" category="list-text">Le Tiering des données est pris en charge grâce aux technologies de chiffrement.</block>
   <block id="957637726d55a9a54b3163fb3c7e8f1b" category="list-text">Le provisionnement fin doit être activé sur les volumes.</block>
@@ -3946,7 +3943,6 @@ Cliquez sur *Ajouter un abonnement* pour associer les informations d'identificat
   <block id="4c1dfec10f54a14c066eb4fde624e32b" category="paragraph"><block ref="4c1dfec10f54a14c066eb4fde624e32b" category="inline-link-rx"></block></block>
   <block id="de6c35943505135e58a4af4389b1768d" category="list-text"><block ref="de6c35943505135e58a4af4389b1768d" category="inline-link-rx"></block></block>
   <block id="9ae78035ef81aaff6187ef9a11cd1f03" category="list-text"><block ref="9ae78035ef81aaff6187ef9a11cd1f03" category="inline-link-rx"></block></block>
-  <block id="08922f23ed9079ed0750935efad792c1" category="admonition">Vous recherchez des informations sur le connecteur ?<block ref="a05739e7bce05bd7a830b46920675255" category="inline-link-rx"></block></block>
   <block id="081496cbc3abd2aa45670e7415b9b307" category="list-text"><block ref="081496cbc3abd2aa45670e7415b9b307" category="inline-link-rx"></block></block>
   <block id="72a0c1f7935cbaab164295a8fac378d8" category="list-text"><block ref="72a0c1f7935cbaab164295a8fac378d8" category="inline-link-rx"></block></block>
   <block id="509259be6d5e15d8959f705cbe0cbcc1" category="paragraph"><block ref="509259be6d5e15d8959f705cbe0cbcc1" category="inline-image-macro-rx" type="image"></block></block>
@@ -4342,7 +4338,6 @@ Cliquez sur *Ajouter un abonnement* pour associer les informations d'identificat
   <block id="b9f4aa39433f5232d4ce50f2a9a3c403" category="list-text">L64s_v3</block>
   <block id="e4b60b51b40a0907e38b3293d36780e6" category="inline-link-macro">Configurations prises en charge dans Azure</block>
   <block id="22342037237200e034fd29c9cfd5bfd4" category="paragraph"><block ref="22342037237200e034fd29c9cfd5bfd4" category="inline-link-macro-rx"></block></block>
-  <block id="eb4c08b87f805a62e5af64a0b7c6fb5a" category="paragraph">BlueXP crée des groupes de sécurité Azure qui incluent les règles entrantes et sortantes nécessaires au bon fonctionnement de Cloud Volumes ONTAP. Vous pouvez consulter les ports à des fins de test ou si vous préférez utiliser vos propres groupes de sécurité.</block>
   <block id="9864c286612d20c437e06d1612a86f2d" category="summary">BlueXP crée des groupes de sécurité AWS qui incluent les règles entrantes et sortantes nécessaires au bon fonctionnement de Cloud Volumes ONTAP. Vous pouvez consulter les ports à des fins de test ou si vous préférez utiliser vos propres groupes de sécurité.</block>
   <block id="87ade7583253b06f01182c970d65aacd" category="paragraph">BlueXP crée des règles de pare-feu Google Cloud qui incluent les règles entrantes et sortantes nécessaires au bon fonctionnement de Cloud Volumes ONTAP. Vous pouvez vous référer aux ports à des fins de test ou si vous préférez utiliser vos propres règles de pare-feu.</block>
   <block id="bab89553328d9045a17e6cd7ae426ebe" category="paragraph">La configuration du protocole ARP pour les volumes s'effectue via ONTAP System Manager et l'interface de ligne de commande ONTAP.</block>
@@ -4755,7 +4750,6 @@ Optimisez l'efficacité. Affichez les mesures de l'efficacité du stockage et id
   <block id="9a06593a786548bb3b7320df7c76e7f1" category="paragraph">L'onglet K8s était obsolète dans une version précédente, et a été supprimé.</block>
   <block id="526b16be728da42dd3eb25f5c378e218" category="list-text">NAE ne peut pas être utilisé avec AKV. NAE nécessite un serveur KMIP externe pris en charge.</block>
   <block id="70004026f1ac6c7f08784ebf0a55c142" category="list-text">Les nœuds Cloud Volumes ONTAP interrogent AKV toutes les 15 minutes pour confirmer l'accessibilité et la disponibilité des clés. Cette période d'interrogation n'est pas configurable, et après quatre échecs consécutifs dans la tentative d'interrogation (au total 1 heure), les volumes sont mis hors ligne.</block>
-  <block id="368b5e8e02b8134e8d1009fff74bf2bc" category="paragraph">Cloud Volumes ONTAP prend en charge<block ref="09aecd5417a289ba24f2f00949971fbc" category="inline-link-rx"></block>. NVE et NAE sont des solutions logicielles qui permettent le chiffrement des données au repos (conformes à la norme FIPS) de volumes 140-2. NVE et NAE utilisent tous deux le chiffrement AES 256 bits.</block>
   <block id="f21def4319b19574f5ca7ab45389822b" category="paragraph">+ Notez que le pack optimisé n'est pas disponible avec BYOL.</block>
   <block id="e2299e8e355a9b503858d1f8d800ccaa" category="paragraph">Pour le pack Essentials, les frais de capacité minimale de 4 To ne s'appliquent pas aux machines virtuelles de stockage qui contiennent des volumes secondaires (protection des données) uniquement. Par exemple, si vous disposez d'une machine virtuelle de stockage avec 1 To de données secondaires, vous êtes facturé uniquement pour cette To de données. Avec tous les autres types de package non Essentials (optimisé et professionnel), le tarif de capacité minimale de 4 To s'applique quel que soit le type de volume.</block>
   <block id="ea4ba4158f6b2b895b0418072f2ba06d" category="paragraph">La licence basée sur les nœuds est le modèle de licence de la génération précédente qui vous permet d'obtenir une licence Cloud Volumes ONTAP par nœud. Ce modèle de licence n'est pas disponible pour les nouveaux clients. Le chargement par nœud a été remplacé par les méthodes de charge par capacité décrites ci-dessus.</block>
@@ -5243,7 +5237,6 @@ Optimisez l'efficacité. Affichez les mesures de l'efficacité du stockage et id
   <block id="c97a482803062120aadcb028bb25c6d1" category="paragraph">Les données Cloud Volumes ONTAP sont automatiquement chiffrées dans Azure à l'aide de<block ref="840493a517ea59018e3217960e80e550" category="inline-link-rx"></block>. L'implémentation par défaut utilise une clé gérée par Microsoft. Aucune configuration n'est requise.</block>
   <block id="1f86b1e4048d088ce153a6f451fb30d6" category="section-title">9 décembre 2024</block>
   <block id="c02b5fa56aae4296da253938ec788b53" category="paragraph">Les données sont automatiquement chiffrées sur Cloud Volumes ONTAP dans Azure à l'aide<block ref="840493a517ea59018e3217960e80e550" category="inline-link-rx"></block> d'une clé gérée par Microsoft. Mais vous pouvez désormais utiliser votre propre clé de chiffrement gérée par le client en procédant comme suit :</block>
-  <block id="a12f9b162c1d705866995451c3607b7a" category="paragraph">ifdef::azure[] endif::azure[] ifdef::gcp[] endif::gcp[]</block>
   <block id="2da8645e38c3d4f73ccf32db700949e1" category="inline-link">Base de connaissances : quelles fonctionnalités d'efficacité du stockage à la volée sont prises en charge par CVO ?</block>
   <block id="d3f3737cc08ede35a7833c219be7cf96" category="paragraph">Depuis la version BlueXP 3.9.5, le reporting de l'espace logique est activé sur la machine virtuelle de stockage initiale. Lorsqu'un espace est indiqué de manière logique, ONTAP indique l'espace volume afin que toutes les fonctionnalités d'efficacité du stockage soient également signalées comme utilisées. Pour plus d'informations sur les fonctionnalités d'efficacité du stockage à la volée, consultez l'article de la base de connaissance<block ref="9af56c326a803ff09c4af3da1cdbc4e2" category="inline-link-rx"></block></block>
   <block id="2036e42877d5092c3afda2b202817932" category="list-text">NFS ifdef::aws[] endif::aws[] ifdef::Azure[] endif::Azure[]</block>
@@ -5850,4 +5843,26 @@ Optimisez l'efficacité. Affichez les mesures de l'efficacité du stockage et id
   <block id="5dc4c869682b55bd825dbd766c5a91c6" category="inline-link-macro">Liens privés Azure désactivés</block>
   <block id="56942c64ec21bc5186a25c20b4c9231e" category="list-text">Vous devez <block ref="d1486d850c17a7ded1dee71bca015a76" category="inline-link-macro-rx"></block>utiliser le noeud final du service de sous-réseau.</block>
   <block id="e48502083eb8949c8f65b2ccddd5adec" category="section-title">12 mai 2025</block>
+  <block id="389d4c98e2d0499c2e4e750430434afb" category="doc">Déploiements en mode privé activés pour Cloud Volumes ONTAP 9.15.1</block>
+  <block id="bce4906e9d915e525cd382b520b71325" category="paragraph">Vous pouvez désormais déployer Cloud Volumes ONTAP 9.15.1 en mode privé sur AWS, Azure et Google Cloud. Ce mode est activé pour les déploiements à nœud unique et haute disponibilité (HA) de Cloud Volumes ONTAP 9.15.1.</block>
+  <block id="8d85a6720847d90489976db4cc2c4e48" category="paragraph">Cloud Volumes ONTAP prend en charge<block ref="09aecd5417a289ba24f2f00949971fbc" category="inline-link-rx"></block>. NVE et NAE sont des solutions logicielles qui permettent le chiffrement des données au repos des volumes conforme à la norme (FIPS) 140-2. NVE et NAE utilisent tous deux le chiffrement AES 256 bits.</block>
+  <block id="3d9f78a1ff8b79063296498224874e6c" category="paragraph">Cloud Volumes ONTAP prend en charge NVE et NAE avec les services de gestion de clés externes (EKM) fournis par AWS, Azure et Google Cloud, y compris des solutions tierces comme Fortanix. Contrairement à ONTAP, pour Cloud Volumes ONTAP, les clés de chiffrement sont générées par le fournisseur cloud, et non dans ONTAP.</block>
+  <block id="918d32b75f0ab883abba3a8dc0c3ae8d" category="inline-link">Matrice d'interopérabilité</block>
+  <block id="fc018227cf021b5cfd4d7696a41f346a" category="paragraph">Cloud Volumes ONTAP utilise les services standard KMIP (Key Management Interoperability Protocol) d'ONTAP. Pour plus d'informations sur les services pris en charge, consultez le <block ref="728e4ee339d5763542973002d2a82dc7" category="inline-link-rx"></block> .</block>
+  <block id="37368004332f325820087f73466f8e6c" category="paragraph">Si vous utilisez NVE, vous avez la possibilité d'utiliser le coffre-fort de clés de votre fournisseur de cloud pour protéger les clés de chiffrement ONTAP :</block>
+  <block id="35b16ddf568bd70f42e0bcb19f2a533c" category="list-text">Azure Key Vault (AKV)</block>
+  <block id="f0daa22edb6ee8b88bae0e5a21b552ec" category="list-text">Service Google Cloud Key Management</block>
+  <block id="81f72afb3ba5f2e16cf373b5ea887aec" category="paragraph">Par défaut, NetApp Aggregate Encryption (NAE) est activé sur les nouveaux agrégats après la configuration d'un gestionnaire de clés externe. Les nouveaux volumes qui ne font pas partie d'un agrégat NAE ont NVE activé par défaut (par exemple, si vous avez des agrégats existants qui ont été créés avant la configuration d'un gestionnaire de clés externe).</block>
+  <block id="9d7d08ead80432c8e527b130cf457a7d" category="paragraph">BlueXP crée des groupes de sécurité Azure qui incluent les règles entrantes et sortantes pour que Cloud Volumes ONTAP fonctionne correctement. <block ref="a05739e7bce05bd7a830b46920675255" category="inline-link-rx"></block> .</block>
+  <block id="52fa9133415c22fe3227f02c5bdc7bdb" category="inline-link">En savoir plus sur les ports internes ONTAP</block>
+  <block id="72cb359256f1b923869ffe5643075163" category="paragraph">Les groupes de sécurité Azure pour Cloud Volumes ONTAP nécessitent que les ports appropriés soient ouverts pour la communication interne entre les nœuds. <block ref="9235b6a724dccf5c41be51f4736123ae" category="inline-link-rx"></block> .</block>
+  <block id="e3f7f3a3bb47d39a7fd58de8d5070b2b" category="paragraph">Nous vous déconseillons de modifier les groupes de sécurité prédéfinis ni d'utiliser des groupes de sécurité personnalisés. Cependant, si vous devez le faire, sachez que le processus de déploiement nécessite que le système Cloud Volumes ONTAP dispose d'un accès complet à son propre sous-réseau. Une fois le déploiement terminé, si vous décidez de modifier le groupe de sécurité réseau, veillez à maintenir ouverts les ports du cluster et les ports réseau haute disponibilité. Cela garantit une communication fluide au sein du cluster Cloud Volumes ONTAP (communication omnidirectionnelle entre les nœuds).</block>
+  <block id="552d4863308abc19f380cc04022d6ad3" category="admonition">La source est l'interface (adresse IP) du système Cloud Volumes ONTAP.</block>
+  <block id="8dbd909e72408c020853ce0f323f1faa" category="list-text">La hiérarchisation des données est prise en charge dans AWS à partir de Cloud Volumes ONTAP 9.2.</block>
+  <block id="bb76865f22c7023c27866da2d50e30b0" category="admonition">Nous ne recommandons pas de hiérarchiser les données vers le stockage d'objets lors de l'utilisation de disques durs à débit optimisé (st1).</block>
+  <block id="0baa9fabb663d0426d677bdef48cab76" category="list-text">Les données inactives sont hiérarchisées selon les compartiments Amazon S3. La hiérarchisation vers d'autres fournisseurs n'est pas prise en charge.</block>
+  <block id="9d04d4aae5bc77b320eddf498e3e1a4c" category="list-text">Les données inactives sont hiérarchisées vers Microsoft Azure Blob. La hiérarchisation vers d'autres fournisseurs n'est pas prise en charge.</block>
+  <block id="4fa4358b6bad8118578db6b5c02a52db" category="list-text">La hiérarchisation des données est prise en charge dans Google Cloud à partir de Cloud Volumes ONTAP 9.6.</block>
+  <block id="bae7cc0d7e8eb757103bffb3f43417c4" category="list-text">Les données inactives sont hiérarchisées vers Google Cloud Storage. La hiérarchisation vers d'autres fournisseurs n'est pas prise en charge.</block>
+  <block id="1971cba9fca6bc598cf10a08dfb20cb6" category="section-title">29 mai 2025</block>
 </blocks>
