@@ -1,0 +1,11 @@
+= Déploiements en mode privé activés pour Cloud Volumes ONTAP 9.15.1
+:allow-uri-read: 
+
+
+
+
+=== Déploiements en mode privé activés pour Cloud Volumes ONTAP 9.15.1
+
+Vous pouvez désormais déployer Cloud Volumes ONTAP 9.15.1 en mode privé sur AWS, Azure et Google Cloud. Ce mode est activé pour les déploiements à nœud unique et haute disponibilité (HA) de Cloud Volumes ONTAP 9.15.1.
+
+Pour plus d'informations sur les déploiements en mode privé, reportez-vous https://docs.netapp.com/us-en/bluexp-setup-admin/concept-modes.html#restricted-mode["Découvrez les modes de déploiement BlueXP"^]à la section .
